<resources>
    <string name="app_name">Tiện ích cá nhân</string>
    <string name="app_info">Phiên bản 1.2\nTác giả : Kỹ sư Lưu Thành Nhựt\nTác quyền 2016</string>
    <string name="btnCuocHen">Cuộc hẹn</string>
    <string name="btnKaraoke">Karaoke</string>
    <string name="btnTinNhan">Tin nhắn</string>
    <string name="btnGame">Trò chơi</string>
    <string name="btnHinhPhim">Hình Phim</string>
    <string name="btnDoiTien">Đổi tiền</string>
    <string name="btnBanDo">Bản đồ</string>
    <string name="btnGhiChu">Ghi chú</string>
    <string name="btnDongBoMayTinh">Đồng bộ</string>
    <string name="Button_chonThuMuc_selectFolderDialog_tigiaactivity">Chọn nơi lưu</string>
    <string name="Button_label_ok_MyDialog_passwordDialog">Tiếp</string>
    <string name="Button_label_close_MyDialog_passwordDialog">Thoát</string>
    <string name="mnuThem">Thêm</string>
    <string name="mnuXoaHet">Xóa hết</string>
    <string name="mnuDocTuFile">Đọc từ file</string>
    <string name="mnuGhiRaFile">Ghi ra file</string>
    <string name="mnuChinhSua">Chỉnh sửa</string>
    <string name="mnuXoa">Xóa</string>
    <string name="mnuTatMo">Tắt/Mở</string>
    <string name="mnuPostFB">Ghi lên Facebook</string>
    <string name="mnutweetTwitter">Ghi lên Twitter</string>
    <string name="mnuPasteTuClipBoard">Lấy từ clipboard</string>
    <string name="mnuLayTinNhan">Lấy tin nhắn</string>
    <string name="mnuLayTuDanhBa">Lấy từ danh bạ</string>
    <string name="mnuNhapTay">Nhập tay</string>
    <string name="mnuLayTuGoogleMap">Lấy từ Google map</string>
    <string name="mnuTaoNhomMoi_quanlytinnhan">Tạo nhóm</string>
    <string name="mnuXoaNhom_quanlytinnhan">Xóa nhóm</string>
    <string name="mnuXoaHetTinNhan_quanlytinnhan">Xóa hết</string>
    <string name="mnuXoaNhieuTinNhan_quanlytinnhan">Xóa nhiều</string>
    <string name="mnuSapXepTheoThoiGian_quanlytinnhan">Sắp xếp theo thời gian</string>
    <string name="mnuSapXepTheoContact_quanlytinnhan">Sắp xếp theo liên hệ</string>
    <string name="mnuTimKiem_quanlytinnhan">Tìm kiếm</string>
    <string name="mnuSapXepTheoLoai_quanlytinnhan">Sắp xếp theo loại</string>
    <string name="mnuSapXep_other">Khác</string>
    <string name="mnuThietDatNhacChuongTinNhan_quanlytinnhan">Tiếng chuông tin nhắn</string>
    <string name="mnuAddNumberKeyword_quanlytinnhan">Thêm số đt/từ khóa rác</string>
    <string name="mnuDeleteNumberKeyword_quanlytinnhan">Xóa số đt/từ khóa</string>
    <string name="mnuDeleteMessageCalllog_quanlytinnhan">Xóa tin nhắn/cuộc gọi rác</string>
    <string name="mnuNhom_quanlytinnhan">Nhóm</string>
    <string name="mnuThietDatNhom_quanlytinnhan">Vào nhóm</string>
    <string name="mnuContact_quanlytinnhan">Liên lạc</string>
    <string name="mnuTaoContactMoi_quanlytinnhan">Thêm liên lạc</string>
    <string name="mnuXoaHetContact_quanlytinnhan">Xóa hết liên lạc</string>
    <string name="mnuXoaNhieuContact_quanlytinnhan">Xóa nhiều liên lạc</string>
    <string name="mnuSapXep_quanlytinnhan">Sắp xếp</string>
    <string name="mnuSapXepTheoGroup_quanlytinnhan">Sắp xếp theo nhóm</string>
    <string name="mnuDaoSapXep_quanlytinnhan">Đảo thứ tự</string>
    <string name="mnuGuiTinNhan_quanlytinnhan">Gửi tin nhắn</string>
    <string name="mnuGoiDienThoai_quanlytinnhan">Gọi điện</string>
    <string name="mnuXoaDia_quanlytinnhan">Xóa đĩa</string>
    <string name="mnuXoaPhoneSim_quanlytinnhan">Xóa phone/sim</string>
    <string name="mnuLayDataPhone_quanlytinnhan">Lấy từ máy và sim</string>
    <string name="mnuLayDataFile_quanlytinnhan">Lấy từ tập tin</string>
    <string name="mnuImportContactFromFile_quanlytinnhan">Đọc tập tin liên hệ</string>
    <string name="Toast_XoaHet">Đã xóa hết cuộc hẹn!</string>
    <string name="Toast_Xoa">Đã xóa!</string>
    <string name="Toast_TatMo_Tat">Đã tắt cảnh báo cuộc hẹn!</string>
    <string name="Toast_TatMo_Mo">Đã bật cảnh báo cuộc hẹn!</string>
    <string name="Toast_TatMoQuaNgay">Cuộc hẹn đã quá ngày!</string>
    <string name="Toast_Them">Đã thêm cuộc hẹn vào</string>
    <string name="Toast_GhiRaFile_ThanhCong">Đã lưu ra file thành công</string>
    <string name="Toast_GhiRaFile_BiLoi">Ghi ra file bị lỗi!</string>
    <string name="Toast_txtlistInput_ChiTietCuocHen">Đã lưu</string>
    <string name="Toast_theodoiduongdi_bando_unlock">Mở khóa và ngừng theo dấu</string>
    <string name="Toast_theodoiduongdi_bando_lock">Khóa và bắt đầu theo dấu</string>
    <string name="Toast_theodoiduongdi_bando_gosofaraway">Bạn đi sai đường rồi</string>
    <string name="Toast_theodoiduongdi_bando_gpsoff">GPS đang tắt</string>
    <string name="Toast_theodoiduongdi_bando_wifi3goff">Wifi và 3G đều đang tắt</string>
    <string name="Toast_loaddone_tigia">Tải hoàn tất</string>
    <string name="Toast_xacthucpassword_wrongpass">Sai mật khẩu</string>
    <string name="Toast_xacthucpassword_notduplicated">Mật khẩu 2 lần không khớp</string>
    <string name="Toast_xacthucpassword_changepassok">Mật khẩu thay đổi xong</string>
    <string name="Toast_encryptedfinish_dongboact">Mã hóa xong</string>
    <string name="Toast_uploadfinish_dongboact">Tải lên xong</string>
    <string name="Toast_nophonenetwork_xacthuc_kiemtrachucnangphone">Thiết bị này không có chức năng nghe gọi</string>
    <string name="Toast_deliverymessage_sendSMS">Gửi OK</string>
    <string name="Toast_deliverymessage_sendSMS_OK">Đã gửi</string>
    <string name="Toast_deliverymessage_sendSMS_failed">Gửi thất bại</string>
    <string name="Toast_deliverymessage_sendSMS_radio_off">Radio bị tắt</string>
    <string name="Toast_deliverymessage_sendSMS_noPDU">Không có PDU</string>
    <string name="Toast_deliverymessage_sendSMS_noService">Không có dịch vụ</string>
    <string name="Toast_savedRingTone_showRingtoneList_MyPhone">Nhạc chuông đã được chọn</string>
    <string name="Toast_Dongboactivity_finish_exportzipfile_ok">Xuất ra tập tin nén xong.</string>
    <string name="Toast_Dongboactivity_finish_exportzipfile_falied">Xuất ra tập tin nén bị lỗi!</string>
    <string name="Toast_Dongboactivity_BackupToGoogleDriver">Sao lưu lên Google Drive thành công</string>
    <string name="Toast_Dongboactivity_uploadwifi_nowifi">Không có kết nối wifi</string>
    <string name="Toast_Dongboactivity_uploadGG_nointernet">Không có kết nối mạng</string>
    <string name="txtTemp_timdiadiem_bando_lowconnection">Mạng quá chậm</string>
    <string name="AlertDialog_Title_ChonFileDoc_QuanLyCuocHen">Chọn tập tin để đọc</string>
    <string name="AlertDialog_Title_TenFileLuu_QuanLyCuocHen">Nhập vào tên tập tin cần lưu</string>
    <string name="AlertDialog_Title_ChiTietCuocHen_GoogleMapAPIGooglePlaceAPI">Chọn loại bản đồ</string>
    <string name="AlertDialog_Content_ChiTietCuocHen_GoogleMapAPIGooglePlaceAPI">Bạn muốn dùng loại bản đồ nào</string>
    <string name="AlertDialog_button_ChiTietCuocHen_GooglePlacesAPI">Các địa điểm Google</string>
    <string name="AlertDialog_button_ChiTietCuocHen_GoogleMapAPI">Bản đồ Google</string>
    <string name="AlertDialog_label_latitude_vitri">Vĩ độ</string>
    <string name="AlertDialog_label_longtitude_vitri">Kinh độ</string>
    <string name="AlertDialog_label_name_vitri">Tên vị trí</string>
    <string name="AlertDialog_label_note_vitri">Ghi chú</string>
    <string name="AlertDialog_title_vitri">Lưu vị trí</string>
    <string name="AlertDialog_button_save_vitri">Lưu</string>
    <string name="AlertDialog_button_cancel_vitri">Đóng</string>
    <string name="AlertDialog_textview_delete_vitri">Xóa</string>
    <string name="AlertDialog_menutitle_quanlytinnhan_call">Gọi</string>
    <string name="AlertDialog_menutitle_quanlytinnhan_reply">Trả lời</string>
    <string name="AlertDialog_menutitle_quanlytinnhan_sendmessage">Gửi tin</string>
    <string name="AlertDialog_menutitle_quanlytinnhan_copyphonenumber">Lấy số điện thoại</string>
    <string name="AlertDialog_menutitle_quanlytinnhan_copycontent">Lấy nội dung</string>
    <string name="AlertDialog_menutitle_quanlytinnhan_copySerial">Lấy mã số</string>
    <string name="AlertDialog_textview_showinfowindow_vitri">Hiển thị bảng thông tin</string>
    <string name="AlertDialog_textview_Center_vitri">Chính giữa</string>
    <string name="AlertDialog_title_findplace_byMarkerName">Nhập tên marker</string>
    <string name="AlertDialog_button_timkiem_findplace_byMarkerName">Tìm</string>
    <string name="AlertDialog_button_timkiem_findplace_byPosition">Đi đến</string>
    <string name="AlertDialog_button_timkiem_findway">Tìm đường đi</string>
    <string name="AlertDialog_title_SaveMapInstruction_TimDuongDi">Nhập tên đường đi</string>
    <string name="AlertDialog_buttonSave_SaveMapInstruction_TimDuongDi">Lưu</string>
    <string name="AlertDialog_title_quanlytinnhan">Nhập tên nhóm</string>
    <string name="AlertDialog_title_quanlytinnhan_editcontact">Nhập thông tin liên lạc</string>
    <string name="AlertDialog_menutitle_quanlytinnhan_editcontact">Thông tin</string>
    <string name="AlertDialog_Title_TenFileTimKiem_QuanLyTinNhan">Tìm kiếm</string>
    <string name="AlertDialog_Title_NhapTenDataFile_QuanLyTinNhan">Nhập đường dẫn file dữ liệu</string>
    <string name="AlertDialog_guiquawifi_xong">Gửi tập tin xong</string>
    <string name="AlertDialog_Toast_addok_vitri">Đã lưu</string>
    <string name="AlertDialog_Toast_markernotfound_vitri">Không tìm thấy</string>
    <string name="search_title_menu_karaoke">Tìm kiếm</string>
    <string name="OptionMenu_BanDo_CheDoDinhVi">Hệ thống Định vị</string>
    <string name="OptionMenu_BanDo_CheDoGPS">GPS</string>
    <string name="OptionMenu_BanDo_CheDoWifi3G">Wifi_3G</string>
    <string name="OptionMenu_Karaoke_SapXepTheoMa">Sắp và tìm theo mã</string>
    <string name="OptionMenu_Karaoke_SapXepTheoTenBaiHat">Sắp và tìm theo tên bài hát</string>
    <string name="OptionMenu_Karaoke_SapXepTheoTenTacGia">Sắp và tìm theo tên tác giả</string>
    <string name="OptionMenu_Karaoke_MoDanhSachBaiHat">Mở tập tin dữ liệu bài hát</string>
    <string name="OptionMenu_TimDuongDi_Bando_ShowSavedMarker">Các đánh dấu đã lưu</string>
    <string name="OptionMenu_TimDuongDi_Bando_Walking">Đi bộ</string>
    <string name="OptionMenu_TimDuongDi_Bando_Transit">Đi xe buýt</string>
    <string name="OptionMenu_TimDuongDi_Bando_Driving">Đi xe máy/xe hơi</string>
    <string name="OptionMenu_TimDuongDi_Bando_SaveMapInstruction">Lưu đường đi</string>
    <string name="OptionMenu_travel_mode_timduongdi_bando">Phương tiện di chuyển</string>
    <string name="OptionMenu_TimDuongDi_Bando_ClearOnMap">Xóa chỉ dẫn bản đồ</string>
    <string name="OptionMenu_TimDuongDi_Bando_ClearOnDisk">Xóa chỉ dẫn trên đĩa</string>
    <string name="OptionMenu_reload_album">Nạp lại từ đĩa</string>
    <string name="OptionMenu_info_album">Thông tin album</string>
    <string name="OptionMenu_sort_album">Sắp xếp</string>
    <string name="OptionMenu_sort_size_album">Xếp theo dung lượng</string>
    <string name="OptionMenu_sort_date_album">Xếp theo ngày</string>
    <string name="OptionMenu_sort_name_album">Xếp theo tên</string>
    <string name="OptionMenu_compress_backup">Nén và phục hồi</string>
    <string name="OptionMenu_openfolder">Chọn thư mục phim ảnh</string>
    <string name="OptionMenu_create_album">Tạo mới</string>
    <string name="OptionMenu_restore_album">Phục hồi</string>
    <string name="mnuBanDo_theodoiduongdi_lockway">Khóa máy bắt đầu theo dấu</string>
    <string name="OptionMenu_firebase">Firebase</string>
    <string name="OptionMenu_firebase_login">Đăng nhập</string>
    <string name="OptionMenu_firebase_logout">Đăng xuất</string>
    <string name="OptionMenu_firebase_register">Đăng ký</string>
    <string name="OptionMenu_firebase_changeaccount">Đổi tải khoản</string>
    <string name="OptionMenu_firebase_changePassword">Đổi mật khẩu</string>
    <string name="OptionMenu_facebook">Facebook</string>
    <string name="OptionMenu_facebook_logout">Đăng xuất</string>
</resources>